# travis_oa

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
modules/: 3rdparty.cmake  qt_module.cmake
src/: CMakeLists.txt  normal_main.cpp
src/chicken_controller/: CMakeLists.txt  normal_chicken_controller.cpp  normal_chicken_controller.h
src/chicken_controller/chicken/: normal_chicken.cpp  normal_chicken.h
tests/: CMakeLists.txt  chicken_controller_test.cpp  chicken_test.cpp
